--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,11 +1,99 @@
-* {
+*,
+*::before,
+*::after {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
-body{
-    background-color: rgba(227, 227, 227, 0.794);
-    font-family: sans-serif;
-    line-height: 1.5;
+body {
+  background-color: rgba(227, 227, 227, 0.794);
+  font-family: sans-serif;
+  line-height: 1.5;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid #777;
+  box-shadow: 14px 7px 10px 3px #777;
+}
+
+header h1 {
+  text-transform: uppercase;
+  font-size: 3.5rem;
+}
+
+.wishheadding {
+  animation: color-animation 4s linear infinite;
+}
+
+.wish-1 {
+  --color-1: #df8453;
+  --color-2: #3d8dae;
+  --color-3: #e4a9a8;
+}
+
+.wish-2 {
+  --color-1: #dbad4a;
+  --color-2: #accfcb;
+  --color-3: #17494d;
+}
+
+.wish-3 {
+  --color-1: #accfcb;
+  --color-2: #e4a9a8;
+  --color-3: #accfcb;
+}
+
+.wish-4 {
+  --color-1: #3d8dae;
+  --color-2: #df8453;
+  --color-3: #e4a9a8;
+}
+
+@keyframes color-animation {
+  0% {
+    color: var(--color-1);
+  }
+  32% {
+    color: var(--color-1);
+  }
+  33% {
+    color: var(--color-2);
+  }
+  65% {
+    color: var(--color-2);
+  }
+  66% {
+    color: var(--color-3);
+  }
+  99% {
+    color: var(--color-3);
+  }
+  100% {
+    color: var(--color-1);
+  }
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.babyimg {
+  margin: 10px;
+  /* width: 40vw;
+  height: 40vh; */
+}
+
+.imgdiv{
+  border: 2px solid #df8453;
+  box-shadow: 3px 6px 5px 3px #777;
+  margin: 10px;
 }
