--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -88,9 +88,9 @@ header h1 {
 
 .babyimg {
   margin: 10px;
-  width: 100%;
-  /* width: 40vw;
-  height: 40vh; */
+  /* width: 100%; */
+  width: 40vw;
+  height: 40vh;
 }
 
 .imgdiv{
