--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -91,6 +91,7 @@ header h1 {
   /* width: 100%; */
   width: 35vw;
   height: 40vh;
+  clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
 }
 
 .imgdiv{
